--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -32,7 +32,7 @@ build_unflags =
 	-std=gnu++11
 lib_deps =
    ${env.lib_deps}
-   h2zero/NimBLE-Arduino @ ^1.4.2
+   h2zero/NimBLE-Arduino @ ~2.1.2
 
 
 [env:native]
